--- a/src/containers/categories/Categories.css
+++ b/src/containers/categories/Categories.css
@@ -17,3 +17,11 @@
 .icon{
     border-radius: 50%;
 }
+
+.category__title{
+    width: 80px;
+    height: 50px;
+    /* text-align: center; */
+    display: table-cell;
+    vertical-align: middle;
+}
