--- a/src/containers/products/Products.css
+++ b/src/containers/products/Products.css
@@ -18,7 +18,7 @@
 .product__wrapper {
     margin-bottom: 20px;
     width: 200px;
-    height: 250px;
+    height: 270px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
@@ -79,12 +79,12 @@
         height: 75vh;
         width: 100%;
         gap: 10px;
-        padding: 5px 10px;
+        padding: 5px;
     }
 
     .product__wrapper {
-        width: 45%;
-        height: 45%;
+        width: 180px;
+        height: 230px;
         
     }
 
