--- a/src/containers/products/Products.css
+++ b/src/containers/products/Products.css
@@ -1,12 +1,11 @@
 .products__container {
-    height: 75vh;
+    min-height: 75vh;
     width: 100%;
     -ms-overflow-style: none;
     scrollbar-width: none;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* align-items: center; */
     gap: 20px;
     padding: 20px;
 }
@@ -76,10 +75,10 @@
 
 @media screen and (max-width: 700px) {
     .products__container {
-        height: 75vh;
+        min-height: 75vh;
         width: 100%;
         gap: 10px;
-        padding: 5px;
+        padding: 10px;
     }
 
     .product__wrapper {
